--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Simply ISBN validator for ISBN-10 and ISBN-13.",
   "main": "isbn-validate.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "eslint": "eslint src/*.js test/*.js"
   },
   "repository": {
     "type": "git",
